--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "sudo node server.ts"
   },
   "devDependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@types/ws": "^8.18.1",
+    "@types/zpl-image": "^0.1.0",
+    "fastify": "^5.3.2",
+    "net": "^1.0.2",
     "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "ws": "^8.18.1",
+    "zpl-image": "^0.2.0"
   },
   "dependencies": {
     "jszpl": "^1.1.8"
