--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "sudo node server.ts"
+    "server": "node server.ts"
   },
   "devDependencies": {
     "@fastify/cors": "^11.0.1",
