--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "sudo node server.ts"
+    "server": "sudo node server.ts",
+    "strip": "strip-json-comments participants/*.json --replace"
   },
   "devDependencies": {
     "@fastify/cors": "^11.0.1",
@@ -17,6 +18,7 @@
     "net": "^1.0.2",
     "typescript": "~5.7.2",
     "vite": "^6.3.1",
+    "vitest": "^3.2.4",
     "ws": "^8.18.1",
     "zpl-image": "^0.2.0"
   },
