--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/static": "^8.2.0",
     "@types/ws": "^8.18.1",
     "@types/zpl-image": "^0.1.0",
     "fastify": "^5.3.2",
