--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-print-zpl-via-socket",
+  "name": "jscc-zpl-image",
   "private": true,
   "version": "0.0.0",
   "type": "module",
